# AI-Trading-Bot

./: .env.example  .gitignore  AI_SIGNALS_PLAN.md  ARCHITECTURE_V2.md  AUDIT_FIXES_SUMMARY.txt  AUDIT_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_FILES_SUMMARY.txt  DASHBOARD_SETUP.md  DELIVERABLES.md  DEPLOYMENT_SUMMARY.md  DESIGN.md  EDGE_RESEARCH_PLAN.md  IMPLEMENTATION_SUMMARY.md  MONEY_MACHINE_PLAN.md  ORDERFLOW_QUICK_REFERENCE.txt  PIXIJS_MIGRATION_PLAN.md  README.md  RESTRUCTURE_PLAN.md  SECURITY_REMEDIATION_PLAN.md  TESTING_SUMMARY.md  layout-proposals.html  main.py  order-flow-upgrade-plan.html  price-ladder-samples.html  pytest.ini  requirements.txt  restart.sh  run_dashboard.py  run_dashboard.sh  spy_factors.md  start.sh  stop.sh  trading-bot-context.skill
.github/: PULL_REQUEST_TEMPLATE.md
config/: __init__.py  api_keys.py.example  settings.py
dashboard/: SIGNAL_API_DOCS.md  afterhours_learner.py  alpaca_ws.py  api_routes.py  app.py  autonomous_trader.py  brain_chat.py  brain_router.py  config.py  confluence.py  data_collector.py  data_router.py  debug_middleware.py  dynamic_exit.py  event_calendar.py  flow_scanner.py  flow_subscriber.py  flow_toxicity.py  gex_engine.py  gex_regime.py  llm_exit_advisor.py  llm_rate_limiter.py  llm_validator.py  market_brain.py  market_internals.py  market_levels.py  market_moments.py  ml_predictor.py  options_analytics.py  orderflow_api.py  paper_trader.py  pm_api.py  position_manager.py  position_tracker.py  regime_detector.py  research_agent.py  sector_monitor.py  (+17 more)
flow-engine/: Cargo.toml  build.rs
flow-engine/src/: alpaca_ws.rs  classifier.rs  cvd.rs  detectors.rs  events.rs  footprint.rs  ingestion.rs  main.rs  options_enrichment.rs  proto.rs  theta_dx.rs  webtransport.rs
(+192 files in other folders)
