[package]
name = "flow-engine"
version = "0.1.0"
edition = "2021"
description = "High-speed order flow engine for SPY tick ingestion, footprint building, and signal detection"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSocket server
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Protobuf binary encoding (Rust → Browser via WS binary frames)
prost = "0.14"

# ThetaData direct access (no Java Terminal) — FPSS real-time + MDDS historical
thetadatadx = { git = "https://github.com/userFRM/ThetaDataDx", tag = "v6.0.1" }

# WebTransport (QUIC) server for low-latency browser delivery
wtransport = "0.6"

# HTTP client (for ThetaData REST polling)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async channel for internal pub/sub
tokio-stream = "0.1"

# Environment variables
dotenvy = "0.15"

# Ordered float for price keys
ordered-float = { version = "4", features = ["serde"] }

# Futures utilities
futures = "0.3"

# WebSocket client (for Alpaca real-time feed)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# URL parsing
url = "2"

# Hex encoding (for cert hash display)
hex = "0.4"

[build-dependencies]
prost-build = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
